Bug 230678 - play more than 1 file via dolphin fails
Summary: play more than 1 file via dolphin fails
Status: RESOLVED FIXED
Alias: None
Product: kmplayer
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Koos Vriezen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-14 11:38 UTC by Fathi Boudra
Modified: 2010-03-20 18:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fathi Boudra 2010-03-14 11:38:58 UTC
Version:           0.11.2 (using KDE 4.4.1)
OS:                Linux
Installed from:    Debian testing/unstable Packages

This a forwarded Debian bug report:
http://bugs.debian.org/542130

when i select more than 1 file in dolphin, and try to right click and "open with kmplayer" 
kmplayer opens, but the playlist is empty and nothing is played. Selecting 1 file works.
playing via kmplayer "file/open" works with multiple files.
Comment 1 Koos Vriezen 2010-03-20 18:58:58 UTC
SVN commit 1105598 by vriezen:

Add simple URLSource deactivation shortcut

Fixes that initial url list is cleared

BUG: 230678

 M  +2 -0      kmplayerpartbase.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1105598