Add simple URLSource deactivation shortcut

Fixes that initial url list is cleared

BUG: 230678

svn path=/trunk/extragear/multimedia/kmplayer/; revision=1105598